# backend/api/platform/urls.py
@@ -19,6 +19,8 @@ urlpatterns = [
     path('businesses/<slug:slug>/bots/<str:role>', views.BotDisconnectView.as_view(), name='bot'),
     path('mobile-app', views.MobileAppView.as_view(), name='mobile-app'),
     path('app/config', views.AppConfigView.as_view(), name='app-config'),
+    path('leads', views.LeadsView.as_view(), name='leads'),
+    path('leads/<int:pk>', views.LeadView.as_view(), name='lead'),
     path('geo/reverse', views.GeoReverseView.as_view(), name='geo-reverse'),
     path('geo/search', views.GeoSearchView.as_view(), name='geo-search'),
 ]
